--- a/webapp/main.css
+++ b/webapp/main.css
@@ -20,6 +20,15 @@ p ,h1,h2,h3,h4,h6
 }
 
 
+.clearfix:before
+.clearfix:after
+  content: " "
+  display: table
+
+.clearfix:after
+  clear: both
+
+
 .container {
   background: #f5f5f5;
   display: inline-block;
