--- a/webapp/main.css
+++ b/webapp/main.css
@@ -10,7 +10,7 @@ body{
     font-size: 100%;
     padding: 0;
     margin: 0;
-    font-family: sans-serif;
+    font-family: monospace;
     text-align: center;
 }
 p ,h1,h2,h3,h4,h6
